@@ -1,1 +1,1 @@
-char versionString[]="1.3.8-KDevelop";
+char versionString[]="1.4.1-KDevelop";
